overflow fix

--- a/styles/examples.css
+++ b/styles/examples.css
@@ -4,4 +4,5 @@ code {
     border-radius: 5px;
     display: block;
     border: 1px solid #999;
+    overflow: auto;
 }
